Add technical decisions section to README
Added a new section detailing technical decisions made during the project development, including architecture, database choices, and tooling.